2003-10-03	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added cursor test to tools/.  Rock on!
	* Change memfd to regfd in example tool.

2003-10-02	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added cursor functions to tl880osd.h.
	* Added example values for some OSD structs to tl880osd.h.

2003-10-01	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_deallocate_osdmem().
	* Added tl880_init_osdmem().
	* Added some more comments to tl880cursor.c.

2003-09-30	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_get_osdmem_offset() to tl880cursor.c.
	* Fixed misinformation in myhd_154.txt about getSDRAMoffset.
	* Add tl880osd.c and move some functions from tl880cursor into it.
	* Added tl880_delete_cursor() function.
	* Change all *osd_memory to *osdmem.

2003-09-29	Mike Bourgeous		<nitrogen@slimetech.com>

	* More cleanup work on tl880cursor.c.
	* Added more cJanus info to myhd_154.txt.
	* Added OSD memory list consolidation function.
	* Added some TL880 memory info to tl880doc.txt.

2003-09-23	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added more OSD info to tl880doc.txt.
	* Added tl880cursor.c to driver/.

2003-09-21	Mike Bourgeous		<nitrogen@slimetech.com>

	* Updated README files.
	* Fix bug in tools/dpc/dpcsync.c (10018->0x10018).
	* Added DPC interrupt rate calculation.

2003-09-20	Mike Bourgeous		<nitrogen@slimetech.com>

	* Better flow in tl880_isr_video_sync_dvd in tl880dpc.c.
	* Added script to test DPC interrupt in tools/.
	* Fixed a bug in tl880dpc.c (tl880_set_dpc_clock).

2003-09-19	Mike Bourgeous		<nitrogen@slimetech.com>

	* Working on tl880dma.c.  Less fake register usage.  Improve flow.

2003-09-18	Mike Bourgeous		<nitrogen@slimetech.com>

	* Working on tl880dma.c.  Improve flow somewhat.
	* Added comment about GPIO line 2 to tl880gpio.c.

2003-09-17	Mike Bourgeous		<nitrogen@slimetech.com>

	* Working on tl880dma.c.

2003-09-16	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added tl880_mode_def struct.