@@ -85,14 +85,14 @@ unsigned char cursor[] = {
 	0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+	0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+	0x00, 0xFF, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	0x00, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	0x00, 0xFF, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	0x00, 0xFF, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+	0x00, 0xFF, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0x00, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	0x00, 0x00, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+	0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-	0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+	0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
@@ -113,11 +113,71 @@ unsigned char cursor[] = {
 	0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
 	0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
 };
-	
+
+
+/*
+ * Range: 0-255 all channels
+ * Return: value suitable for writing to regs 10140-1017c (cursor palette)
+ */
+unsigned long rgb2ypbpr(unsigned long r, unsigned long g, unsigned long b, unsigned long a)
+{
+	float red = (float)r / 255.0;
+	float green = (float)g / 255.0;
+	float blue = (float)b / 255.0;
+	float alpha = (float)a / 255.0;
+	float y, pb, pr;
+
+	/*
+	 * TL880 luma formula with SMPTE-240M chroma formula (?)
+	 */
+	y = 0.2126 * red + 0.7152 * green + 0.0722 * blue;
+	pb = -0.1162 * red - 0.3838 * green + 0.5000 * blue + 0.5;
+	pr = 0.5000 * red - 0.4451 * green - 0.0549 * blue + 0.5;
+
+	/* Clamp range */
+	if(y < 0.0) {
+		y = 0.0;
+	} else if(y > 1.0) {
+		y = 1.0;
+	}
+
+	if(pb < 0.0) {
+		pb = 0.0;
+	} else if(pb > 1.0) {
+		pb = 1.0;
+	}
+
+	if(pr < 0.0) {
+		pr = 0.0;
+	} else if(pr > 1.0) {
+		pr = 1.0;
+	}
+
+	if(alpha < 0.0) {
+		alpha = 0.0;
+	} else if(alpha > 1.0) {
+		alpha = 1.0;
+	}
+
+
+	/* Use r, g, b, a as temporary storage variables to save namespace */
+	/* New Y */
+	r = (unsigned long)(y * 255.0);
+	/* New Pb */
+	g = (unsigned long)(pb * 255.0);
+	/* New Pr */
+	b = (unsigned long)(pr * 255.0);
+	/* New A */
+	a = alpha * 127.0;
+
+	return (a << 24) | (r << 16) | (g << 8) | b;
+}
+
+
 
 int main(int argc, char *argv[])
 {
-	int memfd, i, j;
+	int memfd, i, j/*, k, l*/;
 	unsigned char *memspace;
 	unsigned long x, y;
 
@@ -148,6 +208,7 @@ int main(int argc, char *argv[])
 
 	printf("Clearing cursor info\n");
 	write_regbits(0x10000, 3, 3, 0);
+	write_regbits(0x10000, 8, 8, 0);
 	write_register(0x10100, 0);
 	write_register(0x10104, 0);
 	write_register(0x10108, 0);
@@ -161,13 +222,43 @@ int main(int argc, char *argv[])
 		/* memspace[0x1d8000 + i + 2] = cursor[i + 1] & 0xf0; */
 		/* memspace[0x1d8000 + i + 3] = cursor[i + 0] & 0xf0; */
 
+		/* Pixels are packed two 4-bit pixels per byte, with each 4-byte set reversed */
 		memspace[0x1d8000 + i + 3] = ((cursor[j + 0] & 0xf) << 4) | (cursor[j + 1] & 0x0f);
 		memspace[0x1d8000 + i + 2] = ((cursor[j + 2] & 0xf) << 4) | (cursor[j + 3] & 0x0f);
 		memspace[0x1d8000 + i + 1] = ((cursor[j + 4] & 0xf) << 4) | (cursor[j + 5] & 0x0f);
 		memspace[0x1d8000 + i + 0] = ((cursor[j + 6] & 0xf) << 4) | (cursor[j + 7] & 0x0f);
 	}
 
-	printf("\n");
+	printf("Setting cursor color palette\n");
+	/*
+	l = 0;
+	for(i = 0; i < 256; i += 127 + (i ? 1 : 0)) {
+		for(j = 0; j < 256; j += 127 + (j ? 0 : 1)) {
+			for(k = 0; k < 256; k += 255) {
+				printf("n: %i - r: %i, g: %i, b: %i, a: %i\n", l, i, j, k, l ? 255 : 0);
+				write_register(0x10140 + l * 4, rgb2ypbpr(i, j, k, l ? 255 : 0));
+				l++;
+			}
+		}
+	}
+	*/
+	write_register(0x10140, rgb2ypbpr(0, 0, 0, 0));
+	write_register(0x10144, rgb2ypbpr(0, 0, 255, 255));
+	write_register(0x10148, rgb2ypbpr(0, 128, 0, 255));
+	write_register(0x1014c, rgb2ypbpr(0, 128, 255, 255));
+	write_register(0x10150, rgb2ypbpr(0, 255, 0, 255));
+	write_register(0x10154, rgb2ypbpr(0, 255, 255, 255));
+	write_register(0x10158, rgb2ypbpr(127, 0, 0, 255));
+	write_register(0x1015c, rgb2ypbpr(127, 0, 255, 255));
+	write_register(0x10160, rgb2ypbpr(127, 128, 0, 255));
+	write_register(0x10164, rgb2ypbpr(127, 128, 255, 255));
+	write_register(0x10168, rgb2ypbpr(127, 255, 0, 255));
+	write_register(0x1016c, rgb2ypbpr(127, 255, 255, 255));
+	write_register(0x10170, rgb2ypbpr(255, 0, 0, 255));
+	write_register(0x10174, rgb2ypbpr(255, 0, 255, 255));
+	write_register(0x10178, rgb2ypbpr(255, 128, 0, 255));
+	write_register(0x1017c, rgb2ypbpr(255, 255, 255, 2255));
+
 
 	printf("Setting cursor memory offset\n");
 	write_register(0x10100, 0x1d8000);
@@ -211,20 +302,8 @@ int main(int argc, char *argv[])
 			memspace[0x1d8000 + i + 0] = ((cursor[o + 6] & j) << 4) | (cursor[o + 7] & j);
 		}
 		printf("%i\r", j);
-		getchar();
+		usleep(500000);
 	}
-	for(j = 15; j > 0; j--) {
-		for(i = 0; i < 512; i += 4) {
-			int o = i * 2;
-			memspace[0x1d8000 + i + 3] = ((cursor[o + 0] & j) << 4) | (cursor[o + 1] & j);
-			memspace[0x1d8000 + i + 2] = ((cursor[o + 2] & j) << 4) | (cursor[o + 3] & j);
-			memspace[0x1d8000 + i + 1] = ((cursor[o + 4] & j) << 4) | (cursor[o + 5] & j);
-			memspace[0x1d8000 + i + 0] = ((cursor[o + 6] & j) << 4) | (cursor[o + 7] & j);
-		}
-		printf("%i\r", j);
-		getchar();
-	}
-
 
 
 	printf("Unmapping memory space\n");
